[package]
name = "on-disk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kvs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.18"
failure = "0.1.8"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
tempfile = "3.9.0"
walkdir = "2.4.0"
